evaluation/test_suite/positive/ub44/2.c
#include <stdio.h>

int main()
{
    int x[2] = {0};
    int y = 2;
    printf("%d\n", x[y]);
}
