evaluation/test_suite/negative/ub44/1.c
#include <stdio.h>

int main()
{
    int x[2] = {0};
    printf("%d\n", *(x + 2 - 1));
}
